vendored_parsers/tree-sitter-elixir/grammar.js
    source: ($) =>
      seq(
        optional($._terminator),
        optional(
          seq(sep1($._expression, $._terminator), optional($._terminator))
        )
      ),

    _terminator: ($) =>
      // Right precedence, because we want to consume `;` after newlines if present
      prec.right(choice(seq(repeat(NEWLINE), ";"), repeat1(NEWLINE))),

    _expression: ($) =>
      choice(
        $.block,
        $.identifier,
        $.alias,
        $.integer,
        $.float,
        $.char,
        $.boolean,
        $.nil,
        $._atom,
        $.string,
        $.charlist,
        $.sigil,
        $.list,
        $.tuple,
        $.bitstring,
        $.map,
        $._nullary_operator,
        $.unary_operator,
        $.binary_operator,
        $.dot,
        $.call,
        $.access_call,
        $.anonymous_function
      ),

    block: ($) =>
      seq(
        "(",
        optional($._terminator),
        optional(
          choice(
            sep1(choice($.stab_clause), $._terminator),
            seq(
              sep1(choice($._expression), $._terminator),
              optional($._terminator)
            )
          )
        ),
        ")"
      ),

    identifier: ($) =>
      choice(
        // See Ref 6. in the docs
        /[_\p{Ll}\p{Lm}\p{Lo}\p{Nl}\u1885\u1886\u2118\u212E\u309B\u309C][\p{ID_Continue}]*[?!]?/u,
        "..."
      ),

    alias: ($) => token(sep1(/[A-Z][_a-zA-Z0-9]*/, /\s*\.\s*/)),

    integer: ($) => token(INTEGER),

    char: ($) => /\?(.|\\.)/,

    atom: ($) =>
      token(
        seq(
          ":",
          choice(
            ATOM_WORD_LITERAL,
            ...ATOM_OPERATOR_LITERALS,
            ...ATOM_SPECIAL_LITERALS
          )
        )
      ),

    string: ($) => choice($._quoted_i_double, $._quoted_i_heredoc_double),

    interpolation: ($) => seq("#{", optional($._expression), "}"),

    escape_sequence: ($) =>
      token(
        seq(
          "\\",
          choice(
            // Single escaped character
            /[^ux]/,
            // Hex byte
            /x[0-9a-fA-F]{1,2}/,
            /x\{[0-9a-fA-F]+\}/,
            // Unicode code point
            /u\{[0-9a-fA-F]+\}/,
            /u[0-9a-fA-F]{4}/
          )
        )
      ),

    sigil: ($) =>
      seq(
        "~",
        choice(
          seq(
            alias(token.immediate(/[a-z]/), $.sigil_name),
            choice(
              $._quoted_i_double,
              $._quoted_i_single,
              $._quoted_i_heredoc_single,
              $._quoted_i_heredoc_double,
              $._quoted_i_parenthesis,
              $._quoted_i_curly,
              $._quoted_i_square,
              $._quoted_i_angle,
              $._quoted_i_bar,
              $._quoted_i_slash
            )
          ),
          seq(
            alias(token.immediate(/[A-Z][A-Z0-9]*/), $.sigil_name),
            choice(
              $._quoted_double,
              $._quoted_single,
              $._quoted_heredoc_single,
              $._quoted_heredoc_double,
              $._quoted_parenthesis,
              $._quoted_curly,
              $._quoted_square,
              $._quoted_angle,
              $._quoted_bar,
              $._quoted_slash
            )
          )
        ),
        optional(alias(token.immediate(/[a-zA-Z0-9]+/), $.sigil_modifiers))
      ),

    keywords: ($) =>
      // Right precedence, because we want to consume next items as long
      // as there is a comma ahead
      prec.right(sep1($.pair, ",")),

    pair: ($) => seq(field("key", $._keyword), field("value", $._expression)),

    _keyword: ($) => choice($.keyword, $.quoted_keyword),

    keyword: ($) =>
      // See Ref 7. in the docs
      token(
        seq(
          choice(
            ATOM_WORD_LITERAL,
            ...ATOM_OPERATOR_LITERALS.filter((op) => op !== "::"),
            ...ATOM_SPECIAL_LITERALS
          ),
          /:\s/
        )
      ),

    quoted_keyword: ($) =>
      seq(
        choice($._quoted_i_double, $._quoted_i_single),
        token.immediate(/:\s/)
      ),

    list: ($) => seq("[", optional($._items_with_trailing_separator), "]"),

    tuple: ($) => seq("{", optional($._items_with_trailing_separator), "}"),

    bitstring: ($) =>
      seq("<<", optional($._items_with_trailing_separator), ">>"),

    map: ($) =>
      // Precedence over tuple
      prec(
        1,
        seq(
          "%",
          optional($.struct),
          "{",
          optional(alias($._items_with_trailing_separator, $.map_content)),
          "}"
        )
      ),

    _items_with_trailing_separator: ($) =>
      seq(
        choice(
          seq(sep1($._expression, ","), optional(",")),
          seq(
            optional(seq(sep1($._expression, ","), ",")),
            alias($._keywords_with_trailing_separator, $.keywords)
          )
        )
      ),

    unary_operator: ($) =>
      choice(
        unaryOp($, prec, PREC.CAPTURE_OP, "&", $._capture_expression),
        unaryOp($, prec, PREC.UNARY_OPS, choice(...UNARY_OPS)),
        unaryOp($, prec, PREC.AT_OP, "@"),
        // Capture operand like &1 is a special case with higher precedence
        unaryOp($, prec, PREC.CAPTURE_OPERAND, "&", $.integer)
      ),

    _capture_expression: ($) =>
      choice(
        // Note that block expression is not allowed as capture operand,
        // so we have an explicit sequence with the parentheses and higher
        // precedence
        prec(1, seq("(", $._expression, ")")),
        $._expression
      ),

    binary_operator: ($) =>
      choice(
        binaryOp($, prec.left, PREC.IN_MATCH_OPS, choice(...IN_MATCH_OPS)),
        binaryOp(
          $,
          prec.right,
          PREC.WHEN_OP,
          "when",
          $._expression,
          choice($._expression, $.keywords)
        ),
        binaryOp($, prec.right, PREC.TYPE_OP, "::"),
        binaryOp(
          $,
          prec.right,
          PREC.BAR_OP,
          "|",
          $._expression,
          choice($._expression, $.keywords)
        ),
        binaryOp($, prec.right, PREC.ASSOC_OP, "=>"),
        binaryOp($, prec.right, PREC.MATCH_OP, "="),
        binaryOp($, prec.left, PREC.OR_OPS, choice(...OR_OPS)),
        binaryOp($, prec.left, PREC.AND_OPS, choice(...AND_OPS)),
        binaryOp($, prec.left, PREC.COMP_OPS, choice(...COMP_OPS)),
        binaryOp($, prec.left, PREC.REL_OPS, choice(...REL_OPS)),
        binaryOp($, prec.left, PREC.ARROW_OPS, choice(...ARROW_OPS)),
        binaryOp(
          $,
          prec.left,
          PREC.IN_OPS,
          choice("in", alias($._not_in, "not in"))
        ),
        binaryOp($, prec.left, PREC.XOR_OP, "^^^"),
        binaryOp($, prec.right, PREC.TERNARY_OP, "//"),
        binaryOp($, prec.right, PREC.CONCAT_OPS, choice(...CONCAT_OPS)),
        binaryOp($, prec.right, PREC.RANGE_OP, ".."),
        binaryOp($, prec.left, PREC.ADD_OPS, choice(...ADD_OPS)),
        binaryOp($, prec.left, PREC.MULT_OPS, choice(...MULT_OPS)),
        binaryOp($, prec.left, PREC.POWER_OP, "**"),
        // Operator with arity
        binaryOp(
          $,
          prec.left,
          PREC.MULT_OPS,
          "/",
          $.operator_identifier,
          $.integer
        )
      ),

    dot: ($) =>
      prec(
        PREC.DOT_OP,
        seq(
          field("left", $._expression),
          field("operator", "."),
          field("right", choice($.alias, $.tuple))
        )
      ),

    call: ($) => choice($._call_without_parentheses, $._call_with_parentheses),

    _call_without_parentheses: ($) =>
      choice(
        $._local_call_without_parentheses,
        $._local_call_just_do_block,
        $._remote_call_without_parentheses
      ),

    _call_with_parentheses: ($) =>
      choice(
        $._local_call_with_parentheses,
        $._remote_call_with_parentheses,
        $._anonymous_call,
        $._double_call
      ),

    // Note, calls have left precedence, so that `do end` block sticks to
    // the outermost call

    do_block: ($) =>
      seq(
        callKeywordBlock($, "do"),
        repeat(
          choice($.after_block, $.rescue_block, $.catch_block, $.else_block)
        ),
        "end"
      ),

    stab_clause: ($) =>
      // Right precedence, because we want to consume body if any
      prec.right(
        seq(
          optional(field("left", $._stab_clause_left)),
          field("operator", "->"),
          optional(field("right", $.body))
        )
      ),

    _stab_clause_left: ($) =>
      choice(
        alias($._stab_clause_arguments_with_parentheses, $.arguments),
        alias(
          $._stab_clause_arguments_with_parentheses_with_guard,
          $.binary_operator
        ),
        alias($._stab_clause_arguments_without_parentheses, $.arguments),
        alias(
          $._stab_clause_arguments_without_parentheses_with_guard,
          $.binary_operator
        )
      ),

    body: ($) =>
      choice(
        $._terminator,
        seq(
          optional($._terminator),
          sep1($._expression, $._terminator),
          optional($._terminator)
        )
      ),
