vendored_parsers/tree-sitter-elixir/test/corpus/term/list.txt
=====================================
simple literal
=====================================

[]
[a]
[A]
[1]
[1, 2]
[1,2]
[ 1 , 2 ]

---

(source
  (list)
  (list
    (identifier))
  (list
    (alias))
  (list
    (integer))
  (list
    (integer)
    (integer))
  (list
    (integer)
    (integer))
  (list
    (integer)
    (integer)))

=====================================
nested
=====================================

[[1], 1]

---

(source
  (list
    (list
      (integer))
    (integer)))

=====================================
trailing separator
=====================================

[1,]
[1,2,]

---

(source
  (list
    (integer))
  (list
    (integer)
    (integer)))

=====================================
[error] missing element
=====================================

[, 1]

---

(source
  (list
    (ERROR)
    (integer)))

=====================================
[error] missing separator
=====================================

[1 2]

---

(source
  (list
    (integer)
    (ERROR
      (integer))))
